--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="net.irissoft.itrack.GlobalClass"
+        android:name=".GlobalClass"
         android:allowBackup="true"
         android:icon="@drawable/itrack"
         android:label="@string/app_name"
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowAllDataActivity"></activity>
+        <activity android:name=".ShowAllDataActivity" />
+        <activity android:name=".VollyDataSyncActivity"></activity>
     </application>
 
 </manifest>
